FEA: add delete and get_list endpoint
