# controllers/city.go
@@ -2,6 +2,7 @@ package controllers
 
 import (
 	"encoding/json"
+	"fmt"
 	"github.com/astaxie/beego"
 	"github.com/astaxie/beego/logs"
 	"satellite_calculator/models"
@@ -28,6 +29,50 @@ func (c *CityController) Get() {
 		c.Data["json"] = cityInfo
 	}
 	c.ServeJSON()
+}
+
+// @Title get_cities
+// @Description Get cities
+// @Param    offset  query     int32    true        "the offset"
+// @Param    count  query     int32    true        "the count"
+// @Success 200 {object} []models.City
+// @Failure 403 body is empty
+// @router /list/ [get]
+func (c *CityController) GetCities() {
+	offset, err := c.GetInt32("offset")
+	if err != nil {
+		logs.Error("invalid offset input")
+		c.Abort("403")
+	}
+	count, err := c.GetInt32("count")
+	if err != nil {
+		logs.Error("invalid count input")
+		c.Abort("403")
+	}
+	citiesInfo, err := models.GetCities(offset, count)
+	if err != nil {
+		logs.Error("city get error, err: ", err)
+		c.Data["json"] = make([]*models.City, 0)
+	} else {
+		c.Data["json"] = citiesInfo
+	}
+	c.ServeJSON()
+}
+
+// @Title delete city
+// @Description Delete city
+// @Param    name  query     string    true        "the name of city"
+// @Success 200
+// @Failure 403
+// @router / [delete]
+func (c *CityController) DeleteCity() {
+	name := strings.ToUpper(c.GetString("name"))
+	err := models.DeleteCity(name)
+	if err != nil {
+		logs.Error("delete city error, err: ", err)
+		c.Abort("500")
+	}
+	c.Ctx.WriteString(fmt.Sprintf("delete %v success!", name))
 }
 
 // @Title post
